<resources>
    <string name="app_name">File Manager</string>
    <string name="chronologically">Chronologically</string>
    <string name="extension">Extension</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="sort_by">Sort by</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="order">Order</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="permission_granted">Permission Granted, We have access to storage</string>
    <string name="permission_denied">Permission Denied, We don\'t have access to storage</string>
    <string name="permission_text">Write External Storage permission allows us to read and write files. Please allow this.</string>
    <string name="kb">\" KB\"</string>
    <string name="file_size">File size</string>
    <string name="file_created">File created</string>
    <string name="file_modified_date">File modified date</string>
    <string name="result"> Result</string>
    <string name="results"> Results</string>
    <string name="download_successfully">Result Downloaded Successfully</string>
    <string name="download_failed">Download fail</string>
    <string name="not_match_found">No Match found</string>
    <string name="download_file_list">Download file list</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
</resources>