<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/padding_detail_text_view_14dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFileSizeTitle"
        style="@style/SmallTitleTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/file_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFileSize"
        style="@style/DetailTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFileSizeTitle"
        tools:text="0000" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCreatedTitle"
        style="@style/SmallTitleTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_created"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFileSize" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCreated"
        style="@style/DetailTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreatedTitle"
        tools:text="0000" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvModifiedTitle"
        style="@style/SmallTitleTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_modified_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreated" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvModified"
        style="@style/DetailTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvModifiedTitle"
        tools:text="0000" />

    <ImageView
        android:id="@+id/imageFile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="14dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvModified" />
</androidx.constraintlayout.widget.ConstraintLayout>